--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,14 +7,14 @@
 ## blurb:    Soothing pastel theme for the high-spirited!
 
 # Font
-font_family             Fantasque Sans Mono Regular
+font_family             Fira Code Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto 
-font_size 16.0
+font_size 14.0
 
 # Padding
-window_padding_width 7
+window_padding_width 10
 
 
 
@@ -88,3 +88,6 @@ color14 #8BD5CA
 # white
 color7  #B8C0E0
 color15 #A5ADCB
+
+# key maps
+map kitty_mod+f send_text application cd $(dirname $(fzf)) && clear\r
