--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,4 @@
-#corner-radius= 25.0;
+corner-radius= 15.0;
 rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 
 #################################
@@ -11,22 +11,22 @@ rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+# shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 20;
+#shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.75
+#shadow-opacity = 0.75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -15;
+#shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -15;
+#shadow-offset-y = -15;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -144,10 +144,9 @@ inactive-dim = 0.2;
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'firefox'", "class_i = 'rofi'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'", "class_i = 'rofi'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
-inactive-dim-fixed = 0.75;
 
 # Specify a list of opacity rules, in the format `PERCENT:PATTERN`, 
 # like `50:name *= "Firefox"`. picom-trans is recommended over this. 
@@ -430,7 +429,7 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 1; focus = true; full-shadow = true; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
