--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,4 @@
-corner-radius= 15.0;
+corner-radius = 12;
 rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 
 #################################
@@ -11,22 +11,21 @@ rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-# shadow = false;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-#shadow-radius = 20;
+shadow-radius = 0;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-#shadow-opacity = 0.75
+shadow-opacity = 1;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-#shadow-offset-x = -15;
+shadow-offset-x = 5;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-#shadow-offset-y = -15;
+shadow-offset-y = 5;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -306,7 +305,7 @@ detect-client-leader = true
 # to screen, only used in blur calculation, and such. (Due to technical limitations, 
 # with use-damage, those pixels will still be incorrectly painted to screen.) 
 # Primarily used to fix the line corruption issues of blur, 
-# in which case you should use the blur radius value here 
+# in which case you should use the blur nadius value here 
 # (e.g. with a 3x3 kernel, you should use `--resize-damage 1`, 
 # with a 5x5 one you use `--resize-damage 2`, and so on). 
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
