No border, rounded corner, shadows

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,7 +16,7 @@
 ;
 ;==========================================================
 [colors]
-background = ${xrdb:background}
+background = ${xrdb:crust}
 background-alt = ${xrdb:crust}
 foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:background}
@@ -27,6 +27,9 @@ border = ${xrdb:crust}
 
 [numbers]
 radius = 0
+border-left= 0.0%
+border-right= 0.0%
+border-top= 0.0%
 
 [bar/left]
 monitor = DP-1 
@@ -43,9 +46,9 @@ foreground = ${colors.foreground}
 line-size = 5
 line-color = #f00
 
-border-left-size= 0.25%
-border-right-size= 0.25%
-border-top-size= 0.4%
+border-left-size= ${numbers.border-left}
+border-right-size= ${numbers.border-right}
+border-top-size= ${numbers.border-top}
 border-color = ${colors.border}
 
 module-margin-left = 0
@@ -84,11 +87,11 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-left-size= 0.25%
-border-right-size= 0.25%
-border-top-size= 0.4%
-border-bottom-size= 0.4%
-border-color = ${colors.border}
+border-left-size= ${numbers.border-left}
+border-right-size= ${numbers.border-right}
+border-top-size= ${numbers.border-top}
+border-bottom-size= ${numbers.border-bottom}
+
 module-margin-left = 0
 module-margin-right = 0
 
