--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,4 @@
-corner-radius = 12;
+corner-radius = 20;
 rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 
 #################################
@@ -11,21 +11,21 @@ rounded-corners-exclude = ["class_g = 'firefox' && argb"];
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 0;
+shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 1;
+shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = 5;
+shadow-offset-x = -12;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = 5;
+shadow-offset-y = -12;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -429,7 +429,7 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = false; opacity = 1; focus = true; full-shadow = true; };
-  dock = { shadow = false; }
+  dock = { shadow = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
   dropdown_menu = { opacity = 1; }
