--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,6 +30,7 @@ radius = 0
 border-left= 0.0%
 border-right= 0.0%
 border-top= 0.0%
+border-bottom= 0.0%
 
 [bar/left]
 monitor = DP-1 
@@ -95,9 +96,9 @@ border-bottom-size= ${numbers.border-bottom}
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = FantasqueSansMono Nerd Font Mono:style=Regular:size=12
-font-1 = FantasqueSansMono Nerd Font:style=Regular:size=12
-font-2 = FantasqueSansMono Nerd Font:style=Regular:size=24
+font-0 = Fira Code:style=Regular:size=10
+font-1 = Fira Code:style=Regular:size=10
+font-2 = FantasqueSansMono Nerd Font:style=Regular:size=11
 font-3 = siji:pixelsize=10;1
 
 ;modules-left = bspwm
@@ -175,8 +176,7 @@ interval = 3.0
 
 format-connected-background = ${colors.background}
 format-connected = <label-connected>
-label-connected = "   "
-label-connected-font = 2
+label-connected = "  "
 format-disconnected =
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
