--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,5 +1,5 @@
 corner-radius = 11;
-rounded-corners-exclude = ["class_g = 'firefox' && argb"];
+rounded-corners-exclude = ["class_g = 'firefox' && argb", "class_g='Polybar'"];
 
 #################################
 #             Shadows           #
@@ -15,17 +15,17 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 20;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -12;
+shadow-offset-x = -8;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -12;
+shadow-offset-y = -7;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
