--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,9 +20,9 @@ background = ${xrdb:crust}
 background-alt = ${xrdb:crust}
 foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:background}
-primary = #f4dbd6
-secondary = #e60053
-alert = #bd2c40
+primary = ${xrdb:lavender}
+secondary = #f4dbd6
+alert = #f4dbd6
 border = ${xrdb:crust}
 
 [numbers]
@@ -32,12 +32,12 @@ border-right= 0.0%
 border-top= 0.0%
 border-bottom= 0.0%
 
-[bar/left]
+[bar/main]
 monitor = DP-1 
-width = 5.2%
-height = 3%
-offset-x = 1%
-offset-y = 1%
+width = 100%
+height = 2.5%
+offset-x = 0%
+offset-y = 0%
 fixed-center = true
 
 radius = ${numbers.radius} 
@@ -56,54 +56,14 @@ module-margin-left = 0
 module-margin-right = 0
 
 font-0 = FantasqueSansMono Nerd Font Mono:style=Regular:size=12
-font-1 = FantasqueSansMono Nerd Font:style=Regular:size=12
-font-2 = FantasqueSansMono Nerd Font:style=Regular:size=24
-font-3 = siji:pixelsize=10;1
-
-;modules-left = bspwm
-modules-center = bspwm
-;modules-right= padding pulseaudio padding date padding wlan padding
-
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
-
-wm-restack = bspwm
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-[bar/right]
-monitor = DP-1 
-width = 10%
-height = 3%
-offset-x = 89%
-offset-y = 1%
-fixed-center = true
-
-radius = ${numbers.radius} 
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-left-size= ${numbers.border-left}
-border-right-size= ${numbers.border-right}
-border-top-size= ${numbers.border-top}
-border-bottom-size= ${numbers.border-bottom}
-
-module-margin-left = 0
-module-margin-right = 0
-
-font-0 = Fira Code:style=Regular:size=10
-font-1 = Fira Code:style=Regular:size=10
+font-1 = Fira Code:style=Regular:size=11
 font-2 = FantasqueSansMono Nerd Font:style=Regular:size=11
 font-3 = siji:pixelsize=10;1
+font-4 = Fira Code:style=Regular:size=10
 
-;modules-left = bspwm
-;modules-center = padding windowlist 
-modules-center = padding pulseaudio padding date padding wlan padding
+modules-left = bspwm
+;modules-center = bspwm
+modules-right= padding pulseaudio padding date padding wlan padding
 
 tray-position = right
 tray-padding = 2
@@ -113,7 +73,6 @@ wm-restack = bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 
 [module/xournal]
 type = custom/text
@@ -147,7 +106,7 @@ pin-workspaces = true
 label-focused = ""
 label-focused-foreground = ${colors.primary}
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-underline= ${colors.alert}
 label-focused-padding = 2.5
 
 label-occupied = ""
@@ -177,6 +136,7 @@ interval = 3.0
 format-connected-background = ${colors.background}
 format-connected = <label-connected>
 label-connected = "  "
+label-connected-font = 3
 format-disconnected =
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
@@ -196,6 +156,7 @@ time-alt = %H:%M:%S
 format-background = ${colors.background}
 
 label = %date% %time%
+label-font = 2
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -204,10 +165,12 @@ format-volume = <label-volume>
 format-volume-background = ${colors.background}
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
+label-volume-font = 2
 
 label-muted = muted
 label-muted-background = ${colors.background}
-label-muted-foreground = #666
+label-muted-foreground = ${colors.primary}
+label-muted-font = 2
 
 [settings]
 screenchange-reload = true
